HelloUltraviolet/Fixtures/RejectedSource/Expressions/AsyncTryInfallible/Expected.uv
//! Expected diagnostic metadata for the AsyncTryInfallible rejected-source specimen.

expectedDiagnostic("E-CON-0230", "rule.16.Async-Try-Infallible-Err")
